--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </video>
 
 	   <audio controls autoplay loop>
-		 <source src="Musica Barroca.ogg" type="audio/ogg" >
+		 <source src="Musica Barroca.mp3" type="audio/mp3" >
            </audio>
 
 
