--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <img src="banner.jpg" alt="Imagen de bienvenida" style="max-width: 160%; height: auto;"> 
            
 	    <!-- Video de introducción -->
-            <video controls style="width: 100%; max-width: 600px; margin-top: 1em;">
+            <video controls autoplay loop style="width: 100%; max-width: 600px; margin-top: 1em;">
                 <source src="video-introduccion.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
             </video>
